--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,7 @@ dependencies {
     implementation 'androidx.room:room-ktx:2.2.3'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     kapt 'androidx.room:room-compiler:2.2.3'
+
+    implementation "android.arch.lifecycle:extensions:1.1.1"
+    annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
 }
